feat: Update meta properties and add Open Graph tags for receipt generator
The code changes in the index.html file update the meta properties and add Open Graph tags to improve the SEO and social media sharing of the receipt generator. This includes updating the title, description, keywords, author, and robots meta tags, as well as adding Open Graph tags for title, description, type, and image. These changes ensure that the receipt generator is properly represented when shared on social media platforms.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Gerador de recibo</title>
+
+    <!-- Meta properties -->
+    <meta name="description" content="Gerador de recibo" />
+    <meta name="keywords" content="recibo, gerador, gerador de recibo" />
+    <meta name="author" content="Gabriel Ribeiro" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Gerador de recibo" />
+    <meta property="og:description" content="Gerador de recibo" />
+    <meta property="og:type" content="website" />
+    <!-- Placeholder -->
+    <meta property="og:image" content="https://via.placeholder.com/1200x628.png?text=Gerador+de+Currículo" />
+    <meta property="og:image:secure_url" content="https://via.placeholder.com/1200x628.png?text=Gerador+de+Currículo" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="628" />
   </head>
   <body>
     <div id="root"></div>
