feat: Atualizar idioma da página para pt-BR

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,14 +17,16 @@
     <meta property="og:description" content="Gerador de recibo" />
     <meta property="og:type" content="website" />
     <!-- Placeholder -->
-    <meta property="og:image" content="https://via.placeholder.com/1200x628.png?text=Gerador+de+Currículo" />
-    <meta property="og:image:secure_url" content="https://via.placeholder.com/1200x628.png?text=Gerador+de+Currículo" />
+    <meta property="og:image" content="https://via.placeholder.com/1200x628.png?text=Gerador+de+recibo" />
+    <meta property="og:image:secure_url" content="https://via.placeholder.com/1200x628.png?text=Gerador+de+recibo" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="628" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+
 </html>
